mostrar datos de estudiantes y realizar estructuracion de administracion
