# api_laravel/app/Http/Controllers/staffcontroller.php
@@ -236,10 +236,11 @@ class staffcontroller extends Controller
      *     )
      * )
      */
-    public function getStaff() {
-        return response()->json(student::select('students.*', 'houses.name as house')->leftJoin('houses', 'students.houseId', '=', 'houses.id')->where('hogwartsStaff',true)->paginate(12),200);
+    public function getStaff()
+    {
+        return response()->json(student::select('students.*', 'houses.name as house')->leftJoin('houses', 'students.houseId', '=', 'houses.id')->where('hogwartsStaff', true)->paginate(12), 200);
     }
-    
+
     /**
      * @OA\Get(
      *     path="/api/staff/{id}",
@@ -406,16 +407,18 @@ class staffcontroller extends Controller
      *     )
      * )
      */
-    public function getStaffxid($id) {
-        $categoria =student::where('hogwartsStaff',true)->find($id);
+    public function getStaffxid($id)
+    {
+        $categoria = student::where('hogwartsStaff', true)->find($id);
         if (!$categoria) {
-            return response()->json(['Message'=>'Registro no encontrado'],404);
+            return response()->json(['Message' => 'Registro no encontrado'], 404);
         }
-        return response()->json(student::select('students.*', 'houses.name as house')->leftJoin('houses', 'students.houseId', '=', 'houses.id')->find($id),200);
+        return response()->json(student::select('students.*', 'houses.name as house')->leftJoin('houses', 'students.houseId', '=', 'houses.id')->find($id), 200);
     }
 
     // Funcion que inserta un solo estudiante
-    public function insertStaff(Request $request) {
+    public function insertStaff(Request $request)
+    {
         // Manejo para un solo estudiante, si es necesario
         $uuid = Uuid::uuid4()->toString(); // Genera la clave uuid que es lo mismo que el id
         $request['id'] = $uuid;  // Asumiendo que el modelo Student tiene un atributo 'id' donde se guarda el UUID
@@ -426,7 +429,8 @@ class staffcontroller extends Controller
     }
 
     // Funcion para portar un array de estudiantes
-    public function portStaff(Request $request) {
+    public function portStaff(Request $request)
+    {
         $students = [];
         foreach ($request->all() as $data) {
             $uuid = Uuid::uuid4()->toString(); // Genera la clave uuid que es lo mismo que el id
@@ -438,10 +442,11 @@ class staffcontroller extends Controller
         return response()->json($students, 200);
     }
 
-    public function updateStaff(Request $request, $id) {
-        $categoria = student::where('hogwartsStaff',true)->find($id);
+    public function updateStaff(Request $request, $id)
+    {
+        $categoria = student::where('hogwartsStaff', true)->find($id);
         if (!$categoria) {
-            return response()->json(['Message'=>'Registro no encontrado'],404);
+            return response()->json(['Message' => 'Registro no encontrado'], 404);
         }
         $request['hogwartsStudent'] = false;
         $request['hogwartsStaff'] = true;
